lib_LTLIBRARIES = libcommon.la

headers = \
	bitstring.h \
	cbuf.h \
	fd.h \
	list.h	\
	log.h \
	macros.h \
	safeopen.h	\
	slurm_errno.h	\
	strlcpy.h	\
	xassert.h	\
	uthash.h	\
	xhash.h		\
	xmalloc.h	\
	xstring.h	\
	xtree.h	



	

libcommon_la_SOURCES = \
	$(headers) \
	bitstring.c \
	cbuf.c	\
	fd.c	\
	list.c	\
	log.c	\
	safeopen.c	\
	slurm_errno.c	\
	strlcpy.c	\
	xassert.c	\
	xhash.c		\
	xmalloc.c	\
	xstring.c	\
	xtree.c
	
	