#
# Copyright (c) 2012      Los Alamos National Security, LLC.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
        base/base.h

libmca_test_la_SOURCES += \
        base/test_base_close.c \
        base/test_base_select.c \
        base/test_base_open.c
